--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.shutdown=graceful
+server.port=8081
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.datasource.url=jdbc:mysql://localhost:3306/order?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
